--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
+    "react-textarea-autosize": "^8.5.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
