--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:push": "prisma db push",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.32.1",
     "@types/node": "20.4.5",
@@ -25,6 +28,7 @@
     "lucide-react": "^0.263.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
+    "prisma": "^5.1.1",
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
